# world-cellular-automata

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md  SECURITY_AND_PRIVACY.md  pyproject.toml  release_manifest.json  requirements-real-data.txt  requirements.txt
docs/: 00_project_overview.md  02_architecture.md  100_v28_interface_attribution_plan.md  101_unified_physical_latent_design.md  102_open_source_release_and_versioning.md  34_strict_experiment_route_and_dense_to_sparse_plan.md  60_wca_experiment_constitution_and_macro_plan.md  77_wca_macro_architecture_and_algorithm_validity_criteria.md  80_loop_engineering_operating_system.md  90_evidence_tree_operating_memo.md  94_eval_attribution_and_anti_cheat_protocol.md  98_strict_experiment_manifest_template.md
scripts/: analyze_maze_paths.py  ast_guard.py  audit_model_ladder.py  audit_pdebench_dataset.py  build_open_source_export.py  build_paper_figures.py  build_paper_statistical_tables.py  check_dense_native_mock_equivalence.py  eval_field_h8_rollout_twice.py  eval_field_horizon_stratified.py  eval_field_sentinels.py  eval_maze.py  eval_weatherbench_baseline_horizons.py  eval_weatherbench_horizons.py  field_eval_plan.py  gate_experiment_results.py  generate_maze_pool.py  generate_pdebench_cache.py  profile_model.py  report_v20_pdebench.py  train_field.py  train_field_baseline.py  train_field_token_baseline.py  train_maze.py  wca_exp_control.py  wca_plan_slots.py
tests/: test_dense_native_mock_equivalence.py  test_eval_field_sentinels.py  test_field_horizon_stratified_eval.py  (+6 more)
(+146 files in other folders)
